<resources>
    <!-- Titles -->
    <string name="app_name">CrudAlunos</string>
    <string name="title_aluno">Alunos</string>
    <string name="title_mais">Mais</string>
    <string name="title_aluno_add">Aluno</string>
    <string name="title_usuario_cadastrar">Novo usuário</string>
    <string name="title_login">Login</string>
    <string name="title_curso">Curso</string>
    <string name="title_disciplina">Disciplina</string>
    <string name="title_professor">Professor</string>
    <string name="title_novo_curso">Novo curso</string>
    <string name="title_editar_curso">Editar curso</string>
    <string name="title_search">Pesquisar</string>
    <string name="title_newhorario">Novo horário</string>
    <string name="title_edithorario">Editar horário</string>
    <string name="escolher_tipo">Escolher</string>
    <string name="title_informacoes_basicas">Informações básicas</string>
    <string name="title_edit_usuario">Editar usuário</string>

    <string name="bem_vindo">Bem-Vindo</string>
    <string name="login">Faça login para continuar</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="confirmacaoSenha">Confirmar senha</string>
    <string name="sp_usuario">SP_USUARIO</string>
    <string name="pagina_inicial">Página Inicial</string>
    <string name="sem_usuario">Sem usuário</string>
    <string name="ligar">Ligar</string>
    <string name="email">E-mail</string>

    <string name="salvar">Salvar</string>

    <!-- Validações -->
    <string name="usuario_ou_senha_invalidos">Usuário ou Senha inválidos</string>

    <!-- Validações do usuario -->
    <string name="usuario_obrigatorio">Informe um nome de usuário</string>
    <string name="usuario_ja_cadastrado">Usuário já cadastrada</string>

    <!-- Validaçoes senha usuario -->
    <string name="senha_obrigatoria">Digite uma senha</string>
    <string name="confirmacao_senha_obrigatoria">Digite a confirmação de senha</string>
    <string name="senhas_nao_correspondem">Senhas não correspondem</string>

    <!-- Validações alunos -->
    <string name="nome_obrigatorio">Digite o nome do aluno</string>
    <string name="email_obrigatorio">Digite um e-mail</string>
    <string name="telefone_obrigatorio">Digite o telefone</string>

    <!-- Alunos -->
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="selecionar">Selecionar</string>
    <string name="remover">Remover</string>
    <string name="status">Status</string>
    <string name="curso_matriculados">Cursos matriculados</string>
    <string name="aluno_ja_matriculado">Aluno já matriculado no curso</string>
    <string name="aulas_hoje">Aulas hoje</string>

    <!-- Professores -->
    <string name="pesquisar_professores">Pesquisar professores</string>
    <string name="title_professore">Professor</string>

    <!-- Curso cadastros -->
    <string name="title_tab_detalhes">Detalhes</string>
    <string name="title_tab_disciplinas">Disciplinas</string>

    <!-- Disciplina cadastros -->
    <string name="required_nome">Digite um nome para disciplina</string>
    <string name="nenhum_professor_selecionado">Nenhum professor selecionado</string>
    <string name="nenhum_curso_selecionado">Nenhum curso selecionado</string>
    <string name="horarios">Horários</string>
    <string name="new_chip">New Chip</string>
    <string name="professor_removido">Professor removido</string>
    <string name="curso_removido">Curso removido</string>
    <string name="desfazer">Desfazer</string>
    <string name="default_time">00:00</string>
    <string name="inicio">Inicio</string>
    <string name="fim">Fim</string>

    <!-- Preference Titles -->
    <string name="cadastros_header">Cadastros</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Hint strings -->
    <string name="hint_pesquisar_cursos">Pesquisar cursos...</string>

    <!-- Horarios -->
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="short_domingo">D</string>
    <string name="short_segunda">S</string>
    <string name="short_terca">T</string>
    <string name="short_quarta">Q</string>
    <string name="short_quinta">Q</string>
    <string name="short_sexta">S</string>
    <string name="short_sabado">S</string>
    <string name="dias_semana">Dias da semana</string>
    <string name="invalid_interval">Intervalo entre horas inválido</string>
    <string name="dia_semana_required">Selecione pelo menos um dia da semana</string>
</resources>