<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/textViewCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_curso"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textViewDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_disciplina"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horarios"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>